------------------------------------------------------------------------
r1243 | gaser | 2017-12-11 14:02:16

Changed paths:
M       CHANGES.txt
 M      MBeautify.m
 M      MBeautify.txt
 M      MFormatter.m
M       cat_conf_stools.m
 M      resources/settings/MBeautyConfigurationRules.m
 M      resources/settings/MBeautyConfigurationRules.xml

(1) Changed: Temporarily removed option for 32k meshes because smoothing size
    is not correct for these meshes.
(2) Fixed: Some incorrect && checks for non-logical variables.
------------------------------------------------------------------------
r1242 | gaser | 2017-12-11 14:01:14 +0100 (Mo, 11 Dez 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_resamp.m
M       cat_surf_results.m

(1) Changed: Temporarily removed option for 32k meshes because smoothing size
    is not correct for these meshes.
(2) Fixed: Some incorrect && checks for non-logical variables.

------------------------------------------------------------------------
r1241 | gaser | 2017-12-11 00:03:26 +0100 (Mo, 11 Dez 2017) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

Changed: Formatted cat_surf_results.m

------------------------------------------------------------------------
r1240 | dahnke | 2017-12-07 15:52:10 +0100 (Do, 07 Dez 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_vol_urqio.m
M       html/images/cat_tst_seg_bwp_ana.png

Fixed:  Corrected bug in CAT processing of a given SPM segmentation in cat_main.  
Fixed:  Corrected errors in high-resolution preprocessing pipeline cat_vol_urqio.

------------------------------------------------------------------------
r1239 | gaser | 2017-12-07 15:04:40 +0100 (Do, 07 Dez 2017) | 17 lines

Changed paths:
M       CHANGES.txt
A       MBeautify.m
A       MBeautify.txt
A       MFormatter.m
MM      cat_stat_spm.m
M       cat_vol_slice_overlay.m
A       resources
A       resources/settings